# sandsnap-app

./: docker-compose.yaml
coin/: Dockerfile  build.sh  pyproject.toml  run.sh
coin/src/: app.py  inference.py  main.py  models.py
grain/: Dockerfile  build.sh  run.sh
grain/src/: app.py  helpers.py  inference.py  logger.py  main.py  models.py
grain/src/sedinet/: defaults.py  imports.py  predict.py  sedinet_models.py  sedinet_utils.py
grain/src/sedinet/config/: config_sandsnap_70_30.json
grain/src/sedinet/res/grain_size_global/: global_9prcs_simo_batch12_im512_512_9vars_pinball_noaug.weights.h5  global_9prcs_simo_batch12_im512_512_9vars_pinball_noaug_bias.pkl  global_9prcs_simo_batch4_im512_512_9vars_pinball_noaug.weights.h5  global_9prcs_simo_batch4_im512_512_9vars_pinball_noaug_bias.pkl
queue/: .env.example  .gitignore  Dockerfile  main.py  requirements.txt
web/: .dockerignore  .env.example  .gitignore  Dockerfile  astro.config.mjs  biome.json  components.json  package.json  tsconfig.json
web/db/: config.ts
web/src/actions/: index.ts  processed.ts  submission.ts
web/src/components/: App.svelte
web/src/components/map/: ClusterPopup.svelte  Map.svelte  SinglePopup.svelte  cluster_feature_properties.ts
web/src/components/sidebar/: AppSidebar.svelte  Nav.svelte  NavHeader.svelte
web/src/components/ui/: SiteHeader.svelte
web/src/layout/: BaseLayout.astro
web/src/lib/: images.ts  queue.ts
web/src/pages/: data.astro  data.geojson.ts  index.astro
web/src/pages/api/process/: index.ts
web/src/styles/: global.css
(+8 files in other folders)
